--- a/src/Modal/FilterModal/FilterModal.module.css
+++ b/src/Modal/FilterModal/FilterModal.module.css
@@ -2,7 +2,7 @@
   margin-bottom: 20px;
   border-radius: 10px;
   overflow: hidden;
-  background: rgba(0, 0, 0, 0.03);
+  background: rgba(255, 255, 255, 0.95);
 }
 
 .filterItem {
@@ -20,7 +20,7 @@
 }
 
 .activeItem {
-  background: rgba(0, 122, 255, 0.1);
+  background: rgba(255, 255, 255, 0.95);
 }
 
 .filterRow {
@@ -37,13 +37,17 @@
 }
 
 .filterNameType span {
-  font-size: 14px;
-  font-weight: 500;
-  color: #6e6e73;
+  flex: 0 0 auto;
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: 0.02em;
   text-transform: uppercase;
 }
 
 .filterSummary {
+  flex: 0 0 auto;
+  letter-spacing: 0.02em;
+
   color: #6e6e73;
   font-size: 14px;
   font-weight: 400;
